service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: spot-service
  namespace: workshop
spec:
  selector:
    app: spot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
