ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spot-ingress
  namespace: workshop
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: spot
spec:
  rules:
  - host: workshop.df.nonprod.gcp.heb.com
    http:
      paths:
      - backend:
          serviceName: spot-service
          servicePort: 80
        path: /
  tls:
  - hosts:
    - workshop.df.nonprod.gcp.heb.com
